<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.register.RegisterActivity">
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/logo"
        android:textStyle="bold"
        android:text="@string/story_app"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textStyle="bold"
        android:text="@string/daftar"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/text_label_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_label_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/layout_email"
        android:lineSpacingExtra="3sp"
        android:text="@string/email"
        android:textAppearance="@style/field_label"
        app:layout_constraintBottom_toTopOf="@+id/layout_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/color_state_field"
        app:expandedHintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderText="Contoh: dicoding@gmail.com"
        app:placeholderTextAppearance="@style/hint_text"
        app:placeholderTextColor="@color/black_50">

        <com.example.submissionstoryapp.customviews.EmailEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@color/black_100" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_label_nama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="3sp"
        android:text="@string/nama_lengkap"
        android:textAppearance="@style/field_label"
        android:labelFor="@id/layout_nama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_nama"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/color_state_field"
        app:expandedHintEnabled="false"
        app:placeholderText="Contoh: Fadhli Al Farisi"
        app:placeholderTextAppearance="@style/hint_text"
        app:placeholderTextColor="@color/color_state_placeholder"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/text_label_nama"
        app:layout_constraintStart_toStartOf="@id/text_label_nama"
        app:layout_constraintTop_toBottomOf="@id/text_label_nama">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/black_100" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_label_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/layout_email"
        android:lineSpacingExtra="3sp"
        android:text="@string/kata_sandi"
        android:textAppearance="@style/field_label"
        app:layout_constraintTop_toBottomOf="@+id/layout_nama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:expandedHintEnabled="false"
        app:placeholderText="********"
        app:placeholderTextAppearance="@style/hint_text"
        app:placeholderTextColor="@color/black_50"
        app:boxStrokeColor="@color/color_state_field"
        app:layout_constraintEnd_toEndOf="@id/text_label_password"
        app:layout_constraintStart_toStartOf="@id/text_label_password"
        app:layout_constraintTop_toBottomOf="@id/text_label_password">

        <com.example.submissionstoryapp.customviews.PasswordEditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@color/black_100" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/daftar"
        android:backgroundTint="@color/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_pass" />

    <TextView
        android:id="@+id/tv_to_masuk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/to_masuk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>